--- a/ChouJiang/pom.xml
+++ b/ChouJiang/pom.xml
@@ -6,17 +6,33 @@
 	<artifactId>ChouJiang</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<repositories>
+	
 		<repository>
 			<id>placeholderapi</id>
 			<url>http://repo.extendedclip.com/content/repositories/placeholderapi/</url>
 		</repository>
+		
+		
+		
+
+	  <repository>
+	   <id>spigot-repo</id>
+	  <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+	  </repository>
+
+		
+		
 	</repositories>
+ 	<properties>                                                                                                                                   
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 	<dependencies>
-		<!--SpigotAPI -->
+	
 		<dependency> 
 			<groupId>org.spigotmc</groupId>
 			<artifactId>spigot-api</artifactId>
-			<version>1.14.4-R0.1-SNAPSHOT</version>
+			<version>1.12.2-R0.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 
@@ -24,6 +40,7 @@
 			<groupId>me.clip</groupId>
 			<artifactId>placeholderapi</artifactId>
 			<version>2.9.2</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 </project>
